2014-12-22  Chris Rorvick  <chris@rorvick.com>

	Remove const-value overload

	This seemed like a nice convenience (e.g., it made possible to
	use the overload for std::pair when encoding maps), but it is
	also problematic. In one case it was recursing into itself,
	causing the stack to overflow.

	Remove this overload and fix up the map-encoding dependency on
	it.  If there is a better way to do this, maybe add it back
	later.

2014-12-21  Chris Rorvick  <chris@rorvick.com>

	Move everything into `xdrpp' namespace

2014-12-21  Chris Rorvick  <chris@rorvick.com>

	Move const value encoder to top

	When the code is added to a namespace this stopped working
	(i.e., the compiler could not figure out what to do if the
	passed value was const.) Moving this definition to the top of
	the header fixes the problem.  I am not sure if this is
	resolving a real issue with regard to the spec, or if it is just
	a weird thing with GCC.  I might try to figure this out later.

2014-12-19  Chris Rorvick  <chris@rorvick.com>

	Use unsigned type for `size'

	`size' is only signed so that it conforms to the respecitve
	xdr_ops signatures.  Make this an unsigned variable and use a
	copy with xdr.

2014-12-18  Chris Rorvick  <chris@rorvick.com>

	I am the author

2014-12-18  Chris Rorvick  <chris@rorvick.com>

	Fill in ChangeLog

2014-12-18  Chris Rorvick  <chris@rorvick.com>

	Prefer std::min over ternary operation

	Grabbing the lesser of the two is the intent.  Use std::min to
	show this more explicitly.

2014-12-17  Chris Rorvick  <chris@rorvick.com>

	Autotoolize the build

	Make this a real library and place it under the MIT license.

2014-12-16  Chris Rorvick  <chris@rorvick.com>

	Rename xdr++ => xdrpp

2014-12-16  Chris Rorvick  <chris@rorvick.com>

	Add support for std::multimap

2014-12-16  Chris Rorvick  <chris@rorvick.com>

	Add support for std::deque

2014-12-15  Chris Rorvick  <chris@rorvick.com>

	Split out encode/decode logic
